creacion header y navbar

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,27 +1,21 @@
-<main class="main">
-  <div class="login">
-    <form class="custom-form" method="post">
-      <div class="logo">
-        <img src="../../assets/Netlogistik_Logo_Blanco.png" />
-        <div class="logo-footer"></div>
-      </div>
-      <div class="input-div">
-        <label for="email">Usuario o email</label>
-        <input
-          type="email"
-          name="email" 
-          required="required"
-        />
-      </div>
-      <div class="input-div">
-        <label for="email">password</label>
-        <input
-          type="password"
-          name="password" 
-          required="required"
-        />
-      </div>
-      <button type="submit">Log in</button>
-    </form>
-  </div>
-</main>
+<body>
+  <main class="main">
+    <div class="login">
+      <form class="custom-form">
+        <div class="logo">
+          <img src="../../assets/Netlogistik_Logo_Blanco.png" />
+          <div class="logo-footer"></div>
+        </div>
+        <div class="input-div">
+          <label for="email">Usuario o email</label>
+          <input type="email" name="email" />
+        </div>
+        <div class="input-div">
+          <label for="email">password</label>
+          <input type="password" name="password" />
+        </div>
+        <a routerLink="main"><button type="button">Log In</button></a>
+      </form>
+    </div>
+  </main>
+</body>
