--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,8 @@
-main { 
+body{
+  background-color: rgb(0, 38, 58);
+}
+
+main {
   min-height: 95%;
   background-image: url("../../assets/fondo-log.jpg");
   display: flex;
@@ -7,7 +11,6 @@ main {
   padding: 1rem;
   background-size: cover;
   background-repeat: no-repeat;
-  
 }
 
 div.login {
@@ -68,6 +71,10 @@ input {
   font-weight: 200;
   height: 5vh;
   color: #ffffff;
+}
+
+a {
+  width: 100%;
 }
 
 button {
