--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -6,33 +6,40 @@
         @if(data.iconType){
         <i
           class="material-icons"
-          (click)="data.tabs.length == 0 ? closeToggle(): selectItem(idx)"
+          [ngClass]="data.selected ? 'sidenav-nav-item-selected' : ''"
+          (click)="data.tabs.length == 0 ? closeToggle() : selectItem(idx)"
           [routerLink]="
-            data.tabs.length !== 0 ? '/main/' + data.tabs[idx].route : '/main/' 
+            data.tabs.length !== 0 ? '/main/' + data.tabs[idx].route : '/main/'
           "
         >
           {{ data.icon }}
         </i>
         }@else{
-        <button class="logo" (click)="selectItem(idx)">
+        <button
+          [ngClass]="data.selected ? 'sidenav-nav-item-selected' : ''"
+          (click)="selectItem(idx)"
+        >
           {{ data.icon }}
         </button>
         }
-        <ul>
-          @for(tab of data.tabs; track tab.label; let idy = $index){
-          <li *ngIf="data.selected">
-            <a
-              class="sidenav-nav-link"
-              [routerLink]="'/main/' + tab.route"
-              (click)="selectItem(idx)"
-            >
-              <span class="sidenav-link-text" *ngIf="data.selected">
-                {{ tab.label }}
-              </span>
-            </a>
-          </li>
-          }
-        </ul>
+        <div class="elements-body" *ngIf="data.selected">
+          <h1 *ngIf="data.selected">{{ data.id }}</h1>
+          <ul class="item-element">
+            @for(tab of data.tabs; track tab.label; let idy = $index){
+            <li *ngIf="data.selected">
+              <a
+                class="sidenav-nav-link"
+                [routerLink]="'/main/' + tab.route"
+                (click)="selectItem(idx)"
+              >
+                <span class="sidenav-link-text" *ngIf="data.selected">
+                  {{ tab.label }}
+                </span>
+              </a>
+            </li>
+            }
+          </ul>
+        </div>
       </a>
     </li>
     }
