--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,20 +2,19 @@
   <main class="main">
     <div class="login">
       <form class="custom-form">
-      <!-- <form (ngSubmit)="onSubmit()"> -->
         <div class="logo">
           <img src="../../assets/Netlogistik_Logo_Blanco.png" />
           <div class="logo-footer"></div>
         </div>
         <div class="input-div">
-          <label for="email">Usuario o email</label>
-          <input type="email" name="email" />
+          <label for="username">Usuario</label>
+          <input type="text" [(ngModel)]="username" name="username"/>
         </div>
         <div class="input-div">
-          <label for="email">password</label>
-          <input type="password" name="password" />
+          <label for="password">password</label>
+          <input type="password" [(ngModel)]="password" name="password"/>
         </div>
-        <a routerLink="main"><button type="button" (click)="onSubmit()">Log In</button></a>
+        <a><button type="button" (click)="onSubmit()">Log In</button></a>
       </form>
     </div>
   </main>
