NL-005  se finalizo la logica para modificar archivos war

--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -1,4 +1,5 @@
 <body>
   <h1>{{ solution }}</h1>
-  <button (click)="modificarArchivo('tres')">asdasdas</button>
+  <button (click)="updateFile('tres')">asdasdas</button>
+  <button (click)="getWar()">war</button>
 </body>
