NL-006 creacion preeliminar vista monitor

--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -75,7 +75,7 @@ span:hover, .item-element a:hover {
 
 .sidenav-nav-item-selected {
   background-color: rgb(77, 93, 116);
-  color: rgb(0, 38, 58);
+  color: rgb(255,103,32);
 }
 
 .elements-body {
