--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -1,5 +1,29 @@
 <body>
-  <h1>{{ solution }}</h1>
-  <button (click)="updateFile('tres')">asdasdas</button>
-  <button (click)="getWar()">war</button>
+  <a>{{ solution }}</a>
+  <div class="inline"></div>
+  <h1>Configura tus URL para {{ solution }}</h1>
+  <!-- <button (click)="updateFile('tres')">asdasdas</button>
+  <button (click)="getWar()">war</button> -->
+  <div class="section">
+    <h2>Servicio</h2>
+    <label for="current">Actual URL:</label>
+    <input class="readonly" readonly value="localhost:4949/holi" />
+    <label for="current">Nueva URL:</label>
+    <input />
+  </div>
+  <div class="section"  >
+    <h2>Endpoint</h2>
+    <label for="current">Actual URL:</label>
+    <input class="readonly" readonly value="wms/soltuhermana" />
+    <label for="current">Nueva URL:</label>
+    <input />
+  </div>
+  <div class="buttons">
+    <button>
+        Cancelar
+    </button>
+    <button>
+        Guardar
+    </button>
+  </div>
 </body>
