--- a/src/app/config/config.component.css
+++ b/src/app/config/config.component.css
@@ -40,6 +40,8 @@ input {
   border-color: rgb(228, 228, 228);
   margin-bottom: 1.5%;
   text-align: center;
+  border-width: 0px;
+  font-size: 18px;
 }
 
 label,
@@ -51,21 +53,22 @@ h2 {
 
 .readonly {
   background-color: rgb(233, 229, 229);
-  border: 0;
   color: rgb(0, 38, 58);
 }
 
 .buttons {
   display: flex;
   justify-content: space-evenly;
-  width: 40%; 
-  margin-bottom: 2%;
+  width: 45%;
+  margin-bottom: 1%;
 }
 
-.buttons button{
-  background-color:  rgb(255, 103, 32);
+.buttons button {
+  background-color: rgb(255, 103, 32);
+  /* background-color:  rgb(0, 38, 58); */
   color: white;
-  border:0;
+  border: 0;
   width: 30%;
-  height: 5vh;
+  height: 5.5vh;
+  font-size: 20px;
 }
