--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -50,18 +50,20 @@ button {
 .sidenav-nav-link {
   display: flex;
   align-items: center;
-  height: 3rem;   
+  height: 3rem;
   color: white;
   text-decoration: none;
   border-radius: 0.6rem;
   transition: all 0.3s ease;
 }
 
-.item-element a,  span{
+.item-element a,
+span {
   z-index: 1;
 }
 
-span:hover, .item-element a:hover {
+span:hover,
+.item-element a:hover {
   background-color: white;
   color: rgb(0, 38, 58);
 }
@@ -75,7 +77,7 @@ span:hover, .item-element a:hover {
 
 .sidenav-nav-item-selected {
   background-color: rgb(77, 93, 116);
-  color: rgb(255,103,32);
+  color: rgb(255, 103, 32);
 }
 
 .elements-body {
@@ -89,6 +91,12 @@ span:hover, .item-element a:hover {
 .elements-body h1 {
   font-weight: 500;
   margin-bottom: 5%;
+}
+
+.h1ShowAll {
+  font-weight: 500;
+  margin: 5% 0 5% 0;
+  font-size: 30px;
 }
 
 .item-element {
