--- a/src/app/config/config.component.css
+++ b/src/app/config/config.component.css
@@ -1,10 +1,8 @@
 body {
-  height: 90vh;
+  height: 100%;
   background-image: url("./../../assets/imagen.png");
   background-repeat: no-repeat;
   background-size: cover;
-  /* background-color: rgba(225, 248, 245, 255); */
-  height: auto;
 }
 
 body,
@@ -71,4 +69,9 @@ h2 {
   width: 30%;
   height: 5.5vh;
   font-size: 20px;
+}
+
+.buttons button:active {
+  transform: scale(0.9);
+  background-color: rgb(201, 86, 33);
 }
