--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -9,19 +9,15 @@
     <label for="current">Nueva URL:</label>
     <input />
   </div>
-  <div class="section"  >
+  <div class="section">
     <h2>Endpoint</h2>
     <label for="current">Actual URL:</label>
-    <input class="readonly" readonly value="wms/soltuhermana" />
+    <input class="readonly" readonly value="wms/example-end" />
     <label for="current">Nueva URL:</label>
     <input />
   </div>
   <div class="buttons">
-    <button>
-        Cancelar
-    </button>
-    <button>
-        Guardar
-    </button>
+    <button>Cancelar</button>
+    <button>Guardar</button>
   </div>
 </body>
