--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgb(245, 246, 247);
+}
+
 mat-toolbar {
   background-color: rgb(0, 38, 58);
   position: fixed;
@@ -51,4 +55,7 @@ img {
 
 .child {
   grid-column: 2;
+  min-height: 91vh;
+  height: auto;
+  max-height: 95vh;
 }
