--- a/src/app/config/config.component.css
+++ b/src/app/config/config.component.css
@@ -25,6 +25,19 @@ a {
   margin-bottom: 2%;
 }
 
+.section2 {
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+}
+
+.Endpoint-sec {
+  width: 100%;
+  display: inherit;
+  flex-direction: column;
+  align-items: center;
+}
+
 .inline {
   background-color: rgb(0, 38, 58);
   margin: 0.8% 0 0.5% 0;
@@ -39,7 +52,11 @@ input {
   margin-bottom: 1.5%;
   text-align: center;
   border-width: 0px;
-  font-size: 18px;
+  font-size: 1.5vw;
+}
+
+.section2 input {
+  font-size: 1.1vw;
 }
 
 label,
@@ -66,6 +83,7 @@ h2 {
   /* background-color:  rgb(0, 38, 58); */
   color: white;
   border: 0;
+  border-radius: 5%;
   width: 30%;
   height: 5.5vh;
   font-size: 20px;
