--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -11,6 +11,9 @@
           <mat-icon>menu</mat-icon>
         </button>
         <img src="../../assets/Netlogistik_Logo_Blanco.png" />
+        <button>
+          <mat-icon class="logout" (click)="logOut()">exit_to_app</mat-icon>
+        </button>
       </mat-toolbar>
     </div>
     <div class="row-body">
