--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -40,7 +40,7 @@ form img {
 
 .logo-footer {
   width: 68%;
-  border: 1px solid white; /* Adding a border */
+  border: 1px solid white;
   background-color: red;
   margin-top: 3%;
 }
@@ -73,10 +73,20 @@ input {
   color: #ffffff;
 }
 
+.errorInput {
+  border-color: rgb(199, 10, 10);
+}
+
 a {
   width: 100%;
   justify-content: center;
+  align-items: center;
   display: flex;
+  flex-direction: column;
+}
+
+p {  
+  color: rgb(199, 10, 10);
 }
 
 button {
