--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,13 +8,28 @@
         </div>
         <div class="input-div">
           <label for="username">Usuario</label>
-          <input type="text" [(ngModel)]="username" name="username"/>
+          <input
+            type="text"
+            [(ngModel)]="username"
+            name="username"
+            [ngClass]="error ? 'errorInput' : ''"
+          />
         </div>
+        <!--  -->
         <div class="input-div">
           <label for="password">password</label>
-          <input type="password" [(ngModel)]="password" name="password"/>
+          <input
+            type="password"
+            [(ngModel)]="password"
+            name="password"
+            [ngClass]="error ? 'errorInput' : ''"
+          />
         </div>
-        <a><button type="button" (click)="onSubmit()">Log In</button></a>
+        <a
+          ><button type="button" (click)="onSubmit()">Log In</button>
+
+          <p>{{ logMess }}</p></a
+        >
       </form>
     </div>
   </main>
