--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -5,7 +5,10 @@ body {
 mat-toolbar {
   background-color: rgb(0, 38, 58);
   position: fixed;
-  z-index: 1;
+  z-index: 2;
+
+  display: grid;
+  grid-template-columns: auto auto auto;
 }
 
 .div-grid {
@@ -51,6 +54,7 @@ img {
 .sidenav {
   max-width: 100%;
   grid-column: 1;
+  z-index: 1;
 }
 
 .child {
