--- a/src/app/config/config.component.css
+++ b/src/app/config/config.component.css
@@ -10,7 +10,6 @@ body,
 .section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -98,4 +97,25 @@ button {
 .buttonUnactive {
   background-color: rgb(179, 83, 39);
   color: lightgray;
+}
+
+@media screen and (max-width: 1280px) {
+  a {
+    margin: 0;
+  }
+
+  .section {
+    margin-bottom: 1%;
+  }
+
+  .inline {
+    margin: 0.5% 0 0.2% 0;
+    width: 30%;
+    height: 0.35vh;
+  }
+
+  .buttons {
+    margin-top: 0.8%;
+    margin-bottom: 1%;
+  }
 }
