--- a/src/app/transactionHistory/transactionHistory.component.css
+++ b/src/app/transactionHistory/transactionHistory.component.css
@@ -22,6 +22,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+
   justify-content: space-between;
 }
 
@@ -33,35 +34,70 @@ h1 {
 
 .filtersOpt,
 .searchFilters {
-  width: 60%;
+  width: 65%;
   height: 2em;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin: 0;
 }
 
-.filtersOpt .calendarIcon {
+.datePickerDiv {
+  display: flex;
+  max-width: max-content;
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 5px;
+  height: 2em;
+  align-items: center;
+}
+
+.datePickerDiv .dates {
+  display: inherit;
+  flex-wrap: wrap;
+  margin: 0;
+  width: min-content;
+}
+
+.datePickerDiv .dates input {
+  /* margin: -20% 0;
+  max-width: 4em;
+  max-height: 30%;
+  font-size: xx-small;
+  border: 0; */
+  height: 0.7em;
+  width: 4.1em;
+  font-size: smaller;
+  margin: 0.2em 0 0 0.2em;
+  outline: none;
+  background-color: transparent;
+  border: 0;
+}
+
+.datePickerDiv mat-icon {
   color: rgb(255, 103, 32);
-  margin: 0 1% 1% 0;
+  margin: 0 1.5% 1% 0;
+  max-width: 2em;
+  max-height: min-content;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .searchFilters {
-  width: 80%;
+  width: 55%;
   background-color: white;
   border: 1px solid black;
   border-radius: 5px;
 }
 
 .filtersOpt .searchFilters input {
-  width: 80%;
+  width: 75%;
   height: 75%;
   border: 0;
   outline: none;
   margin-left: 2%;
-}
- 
-
-.filtersOpt .searchFilters mat-icon {
 }
 
 .titleLine {
