--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,69 @@
-
 body,
 html {
   margin: 0;
   height: 100vh;
+}
+
+.mat-mdc-dialog-container .mdc-dialog__surface {
+  background-color: rgba(0, 0, 0, 0.5) !important;
+  border-radius: 20px !important;
+}
+
+.mat-datepicker-content {
+  border-radius: 20px !important;
+}
+
+.mat-datepicker-content-container h2 {
+  color: rgb(255, 103, 32) !important;
+  height: min-content !important;
+  margin-bottom: 0% !important;
+}
+
+.mat-calendar-controls {
+  margin-top: 0% !important;
+}
+
+.mat-datepicker-content-container,
+.mat-datepicker-content-container span {
+  height: min-content !important;
+  text-align: center;
+  color: white;
+  border-radius: 20px !important;
+  background-color: rgb(0, 38, 58);
+}
+
+.mat-calendar-body-cell[aria-disabled="true"] span {
+  color: grey !important;
+}
+
+.mat-calendar-body-label,
+.mat-calendar-arrow polygon,
+.mat-mdc-button-ripple {
+  color: rgb(255, 103, 32) !important;
+  fill: rgb(8, 100, 204) !important;
+}
+
+.mat-calendar-previous-button,
+.mat-calendar-next-button {
+  color: rgb(8, 100, 204) !important;
+}
+
+.mat-calendar-table-header tr {
+  border-bottom: 1px solid rgb(8, 100, 204);
+}
+.mat-calendar-table-header tr span,
+.mdc-button__label span {
+  color: rgb(255, 103, 32) !important;
+}
+
+.mat-calendar-table-header tr[aria-hidden="true"] {
+  border-bottom: 0;
+}
+
+.mat-calendar-body-cell-content.mat-focus-indicator.mat-calendar-body-today {
+  border-color: rgb(8, 100, 204) !important;
+}
+
+.highlighted-date{
+  background-color: red !important;
 }
